# ice-breaker

./: .env.sample  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  code_quality.yml  security.yml  setup_environment.yml
application/: __init__.py  config.py
application/agents/: __init__.py  linkedin_lookup_agent.py  twitter_lookup_agent.py
application/chains/: __init__.py  custom_chains.py
application/routes/: __init__.py  api.py  views.py
application/schemas/: __init__.py  output_parsers.py
application/services/: __init__.py  ice_breaker.py  linkedin.py  twitter.py
application/utils/: __init__.py  custom_serp_api_wrapper.py
docs/: info.txt
static/css/: style.css
templates/: index.html
